# C-_Workspace

./: README.md
abstract_classes_and_pure_virtual_functions/: main  main.cpp
auto_keyword/: main  main.cpp
boost_fun/: CMakeCache.txt  CMakeLists.txt  Makefile  boost_fun  cmake_install.cmake  main.cpp
c++11_initialization/: main  main.cpp
capturing_this_with_lambdas/: main  main.cpp
complex_number/: Complex.cpp  Complex.h  compile_and_link.txt  main.cpp
constructors_and_memory/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp
decltype/: compile.txt  main  main.cpp
delegating_constructors/: main  main.cpp
ellison_and_optimization/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp
enhanced_for_loops/: main  main.cpp
fractal_creator/: Bitmap.cpp  Bitmap.h  BitmapFileHeader.h  BitmapInfoHeader.h  CMakeCache.txt  CMakeLists.txt  FractalCreator.cpp  FractalCreator.h  Makefile  Mandelbrot.cpp  Mandelbrot.h  RGB.cpp  RGB.h  Zoom.h  ZoomList.cpp  ZoomList.h  cmake_install.cmake  main  main.cpp
function_pointers/: main  main.cpp
functors/: main  main.cpp
initializer_lists/: main  main.cpp
ipc/: reader  reader.cpp  writer  writer.cpp
kalman_filter_equations/: main  main.cpp
lambda_capture_expressions/: main  main.cpp
lambda_expressions/: main  main.cpp
lambda_parameters_and_return_types/: main  main.cpp
lvalue_references/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp
mutable_lambdas/: main  main.cpp
nested_template_classes/: Ring.h  main  main.cpp
(+44 files in other folders)
